// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array items with invalid props 1`] = `
Object {
  "joiValidationErrorItems": Array [
    Object {
      "context": Object {
        "key": "a1",
        "label": "a[0].a1",
        "value": 5,
      },
      "message": "\\"a[0].a1\\" must be a string",
      "path": Array [
        "a",
        0,
        "a1",
      ],
      "type": "string.base",
    },
  ],
}
`;

exports[`array with invalid items 1`] = `
Object {
  "joiValidationErrorItems": Array [
    Object {
      "context": Object {
        "key": 1,
        "label": "a[1]",
        "type": "object",
        "value": "",
      },
      "message": "\\"a[1]\\" must be of type object",
      "path": Array [
        "a",
        1,
      ],
      "type": "object.base",
    },
  ],
}
`;

exports[`error should contain errorItems 1`] = `
Object {
  "joiValidationErrorItems": Array [
    Object {
      "context": Object {
        "encoding": undefined,
        "key": "a2",
        "label": "a2",
        "limit": 2,
        "value": "a",
      },
      "message": "\\"a2\\" length must be at least 2 characters long",
      "path": Array [
        "a2",
      ],
      "type": "string.min",
    },
  ],
  "joiValidationObjectName": "objName",
}
`;

exports[`getValidationResult should still convert 1`] = `
[JoiValidationError: objName
{
  "a1": " ff ",
  "a2" [31m[1][0m: "a"
}
[31m
[1] "a2" length must be at least 2 characters long[0m]
`;

exports[`long message string 1`] = `
"[
  {
    \\"a1\\" [31m[1, 10, 100, 1000, 101, 102, 103, 104, 105, 106, 107, 108, 109, 11, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 12, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 13, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 14, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 15, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 16, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 17, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 18, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 19, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 2, 20, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 21, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 22, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 23, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 24, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 25, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 26, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 27, 270, 271, 272, 273, 274, 275, 276, 277, 278, 
... 44 KB message truncated
\\"[0].a1\\" must be a string @ .0.a1
\\"[1].a1\\" must be a string @ .1.a1
\\"[2].a1\\" must be a string @ .2.a1
\\"[3].a1\\" must be a string @ .3.a1
\\"[4].a1\\" must be a string @ .4.a1
... 1000 errors"
`;

exports[`should fail on invalid values 1`] = `"\\"value\\" is required"`;

exports[`should fail on invalid values 2`] = `"\\"value\\" is required"`;

exports[`should fail on invalid values 3`] = `"\\"value\\" must be of type object"`;

exports[`should fail on invalid values 4`] = `"\\"value\\" must be of type object"`;

exports[`should fail on invalid values 5`] = `"\\"value\\" must be of type object"`;

exports[`should fail on invalid values 6`] = `"\\"value\\" must be of type object"`;

exports[`should fail on invalid values 7`] = `
"{
  \\"a1\\" [31m[1][0m: \\"a\\"
}
[31m
[1] \\"a1\\" length must be at least 2 characters long[0m"
`;

exports[`should fail on invalid values 8`] = `
"{
  \\"a1\\" [31m[1][0m: \\"a12345\\"
}
[31m
[1] \\"a1\\" length must be less than or equal to 5 characters long[0m"
`;

exports[`should include id in the error message 1`] = `
"Object.someId
{
  \\"id\\": \\"someId\\",
  [41m\\"a1\\"[0m[31m [1]: -- missing --[0m
}
[31m
[1] \\"a1\\" is required[0m"
`;

exports[`should include id in the error message 2`] = `
Object {
  "joiValidationErrorItems": Array [
    Object {
      "context": Object {
        "key": "a1",
        "label": "a1",
      },
      "message": "\\"a1\\" is required",
      "path": Array [
        "a1",
      ],
      "type": "any.required",
    },
  ],
  "joiValidationObjectId": "someId",
  "joiValidationObjectName": "Object",
}
`;

exports[`should include id in the error message 3`] = `
"ObjName.someId
{
  \\"id\\": \\"someId\\",
  [41m\\"a1\\"[0m[31m [1]: -- missing --[0m
}
[31m
[1] \\"a1\\" is required[0m"
`;

exports[`should include id in the error message 4`] = `
Object {
  "joiValidationErrorItems": Array [
    Object {
      "context": Object {
        "key": "a1",
        "label": "a1",
      },
      "message": "\\"a1\\" is required",
      "path": Array [
        "a1",
      ],
      "type": "any.required",
    },
  ],
  "joiValidationObjectId": "someId",
  "joiValidationObjectName": "ObjName",
}
`;

exports[`should include id in the error message 5`] = `
"Obj1.someId
{
  \\"id\\": \\"someId\\",
  [41m\\"a1\\"[0m[31m [1]: -- missing --[0m
}
[31m
[1] \\"a1\\" is required[0m"
`;

exports[`should include id in the error message 6`] = `
Object {
  "joiValidationErrorItems": Array [
    Object {
      "context": Object {
        "key": "a1",
        "label": "a1",
      },
      "message": "\\"a1\\" is required",
      "path": Array [
        "a1",
      ],
      "type": "any.required",
    },
  ],
  "joiValidationObjectId": "someId",
  "joiValidationObjectName": "Obj1",
}
`;
